search widget alignment issues

--- a/style.css
+++ b/style.css
@@ -913,7 +913,10 @@ a:active
 	top: 0;
 	right: 0;
 	padding: 0;
-	margin: 0;
+	margin-top: 6;
+	margin-bottom: 5;
+	margin-right: 0;
+	margin-left: 0;
 	background: url(images/search_icon.png) no-repeat center center;
 	text-indent: -99999999999px;
 }
